--- a/src/pages/posts/hello-world.mdx
+++ b/src/pages/posts/hello-world.mdx
@@ -4,6 +4,7 @@ title: Hello World
 description: This is a description
 date: 2023-05-12
 tag: lua, development
+image: /blog/lights.png
 ---
 
 #### Code
