--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,7 +1,7 @@
 ---
 type: page
 date: 2023-05-23
-title: About
+title: Tanner Aslan
 ---
 
 # Your Name
@@ -9,9 +9,3 @@ title: About
 Hey, I'm Tanner Aslan.
 
 This portfolio is built with **Next.js**, **React**, and **Typescript**. It's deployed on **Vercel** and the source code is available on **GitHub**.
-
----
-
-- Twitter [@soliform](https://twitter.com/soliform)
-- GitHub [@soliform](https://github.com/soliform)
-- Email tanneraslan05@gmail.com
