--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -8,4 +8,4 @@ title: Tanner Aslan
 
 Hey, I'm Tanner Aslan.
 
-This portfolio is built with **Next.js**, **React**, and **Typescript**. It's deployed on **Vercel** and the source code is available on **GitHub**.
+This portfolio is built with **Next.js**, **React**, and **Typescript**. It's deployed on **Vercel** and the source code is available on **[**Github**](https://github.com/tanneraslan/website).**
