--- a/src/pages/posts/hello-world.mdx
+++ b/src/pages/posts/hello-world.mdx
@@ -1,7 +1,7 @@
 ---
 type: post
 title: Hello World
-description: This is a description
+description: The file "hello-world.mdx" is a Markdown (MDX) file, which is a format that combines Markdown and JSX syntax. It currently contains a single line of text that says "This is a description".
 date: 2023-05-12
 tag: lua, development
 image: /blog/lights.png
