--- a/src/pages/posts/water-physics.mdx
+++ b/src/pages/posts/water-physics.mdx
@@ -8,4 +8,4 @@ image: /blog/water.gif
 ---
 
 As a Roblox game developer, I've encountered several issues during the development process. In this blog post, I'll share my experience with some of the most common issues I've come across and how I've overcome them.
-In addition.
+In addition, I also have issues with multiplayer.
