--- a/src/pages/music/index.mdx
+++ b/src/pages/music/index.mdx
@@ -9,3 +9,4 @@ import { MusicItem } from "@/components/MusicItem";
 # Music
 
 <MusicItem title="Take a Joyride" id="takeajoyride" />
+<MusicItem title="Piano Sonata No. 69" id="pianosonata69" />
