--- a/src/pages/posts/derivative-formula.mdx
+++ b/src/pages/posts/derivative-formula.mdx
@@ -8,5 +8,6 @@ tag: lua, development
 
 While doing some taylor series calc homework, I got frustrated from differentiating the same exact functions over and over. I began to wonder if there was some sort of formula to do multiple differentations more quickly, but I couldn't find anything that worked for any function.
 
-So, out of curiousity, I wrote down the formula for a difference quotient on my paper. 
-$$ f'(x) = \lim\limits_{h \to \infty} frac{f(x)-f(x+h)}{h}$$
+So, out of curiousity, I wrote down the formula for a difference quotient on my paper.
+
+$$f'(x) = \lim_{h \to 0} \frac{f(x+h)-f(x)}{h}$$
