--- a/src/pages/posts/light-beams.mdx
+++ b/src/pages/posts/light-beams.mdx
@@ -1,9 +1,9 @@
 ---
 type: post
-title: Recreating Lusion Lab's AKARI Light Beams
+title: Recreating Lusion Lab's AKARI light beams
 description: This post explores rendering 2D path traced light beams using sign distance fields and soft shadow algorithms.
-date: 2023-05-12
-tag: graphics, shader, math, raytracing
+date: 2023-11-24
+tag: graphics, shader, math, raytracing, glsl
 image: /blog/lights.png
 ---
 
