--- a/src/pages/resume.mdx
+++ b/src/pages/resume.mdx
@@ -4,22 +4,98 @@ title: Resume
 date: 2023-04-01
 ---
 
-### Education
+# Tanner Aslan  
+**Phone:** (502)-389-7540  
+**Email:** contact@tanneraslan.com
+**Location:** Louisville, KY  
+**Website:** [tanneraslan.com](http://tanneraslan.com)  
 
-Ballard High School
-Class of 2024
+---
 
-Courses:
+## Education  
 
-- AP Computer Science Principles
-- AP Computer Science A
+<div style={{ display: "flex", justifyContent: "space-between" }}>
+  <span>**University of Michigan - Ann Arbor, MI**</span>
+  <span>August 2024 – Present</span>
+</div>  
+- Class of 2028; Pursuing a B.S. in Computer Science  
 
-### Achievements
+<div style={{ display: "flex", justifyContent: "space-between" }}>
+  <span>**Ballard High School - Louisville, KY**</span>
+  <span>August 2020 – May 2024</span>
+</div>  
+- Class of 2024; Achieved Valedictorian status with 4.23 GPA and 35 ACT; awarded Seal of Arts Excellence.  
+- **Relevant Coursework:** AP Computer Science A, AP Calculus BC, AP Biology, AP Statistics, AP Music Theory.  
+- Numerous science fair awards including:  
+  - 1st place for *Creating an AI to Pursue a Moving Target*  
+  - 2nd place for *Real-Time Ocean Simulation*  
 
-- 4.0 GPA
+---
 
-### Technical Skills
+## Skills & Proficiencies  
 
-- Roblox
+- **Programming Languages:** Lua, Python, Java, C, C++, GLSL, JavaScript; well-versed in OOP concepts.  
+- **Software Development:** GitHub, Visual Studio Code, IntelliJ IDEA; experience with Ubuntu/Linux systems.  
+- **Computer Hardware:** Built and maintained desktop computers; expertise in hardware compatibility and user-specific performance tuning.  
+- **Office Skills:** Proficient in Google Suite and Microsoft Office 365; typing speed of 100+ WPM.  
 
-####
+---
+
+## Projects  
+
+<div style={{ display: "flex", justifyContent: "space-between" }}>
+  <span>**Personal Website**</span>
+  <span>December 2023 – Present</span>
+</div>  
+- Built using Next.js, React, and programmed in TypeScript.  
+- Deployed and hosted on Vercel with pages designed in markdown for flexibility.  
+- Added support for executable shader code (GLSLCanvas) and LaTeX for math equations.  
+
+<div style={{ display: "flex", justifyContent: "space-between" }}>
+  <span>**Chess Engine & AI**</span>
+  <span>March 2023 – June 2023</span>
+</div>  
+- Developed a chess board and AI using Java, with a user interface built with JavaFX.  
+- Implemented minimax algorithm with alpha-beta pruning for strategic move prediction.  
+- Achieved an online chess rating of nearly 1900 on lichess.org.  
+
+<div style={{ display: "flex", justifyContent: "space-between" }}>
+  <span>**Ocean Simulation**</span>
+  <span>December 2021 – Present</span>
+</div>  
+- Designed an ocean simulation using summed Gerstner waves and vertex displacement.  
+- Developed a voxelized buoyancy model to simulate floating object behavior.  
+
+<div style={{ display: "flex", justifyContent: "space-between" }}>
+  <span>**Light Simulation**</span>
+  <span>June 2022 – Present</span>
+</div>  
+- Created realistic light diffusion models in 2D using path tracing and SDFs.  
+- Combined GLSL shaders and C++ with OpenGL for interactive simulations.  
+- **Demo and Article:** [Light Simulation Demo](https://tanneraslan.com/posts/light-beams).  
+
+---
+
+## Work Experience  
+
+<div style={{ display: "flex", justifyContent: "space-between" }}>
+  <span>**University of Michigan Information and Technology Services**</span>
+  <span>September 2024 – Present</span>
+</div>  
+- Provided technical support and tailored recommendations for students and faculty.  
+- Managed inventory, handled POS transactions, and completed Apple SEED courses.  
+
+<div style={{ display: "flex", justifyContent: "space-between" }}>
+  <span>**Kentuckiana Youth Poet Laureate**</span>
+  <span>June 2024 – August 2024</span>
+</div>  
+- Designed promotional materials, set up A/V for events, and contributed to website setup.  
+
+<div style={{ display: "flex", justifyContent: "space-between" }}>
+  <span>**Quaternion Entertainment**</span>
+  <span>January 2020 – March 2023</span>
+</div>  
+- Programmed and designed games for ROBLOX, achieving 20M+ plays and 15k+ server members.  
+- Collaborated with developers and QA testers to enhance game quality.  
+
+---
