fix layout issues
fix layout issues

--- a/src/pages/resume.mdx
+++ b/src/pages/resume.mdx
@@ -6,8 +6,8 @@ date: 2023-04-01
 
 # Tanner Aslan  
 **Phone:** (502)-389-7540  
-**Email:** contact@tanneraslan.com
-**Location:** Louisville, KY  
+**Email:** [contact@tanneraslan.com](mailto:contact@tanneraslan.com)  
+**Location:** Louisville, KY / Ann Arbor, MI  
 **Website:** [tanneraslan.com](http://tanneraslan.com)  
 
 ---
