update clocks on footer/header

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -8,4 +8,10 @@ title: Tanner Aslan
 
 Hey, I'm Tanner Aslan.
 
+I'm a freshmen studying a B.S. in Computer Science at University of Michigan Ann Arbor, but I'm originally from Kentucky. I started my CS journey with game development, but I'm now interested in graphics programming and applications of parallel computing.
+
+Currently, I'm working on personal projects using mainly C++, GLSL, and OpenGL API. I'm interested in exploring NVIDIA CUDA, Rust, and more complex graphics APIs like Vulkan.
+
+Outside of work, I play the violin and enjoy composing music as a hobby.
+
 This portfolio is built with **Next.js**, **React**, and **Typescript**. It's deployed on **Vercel** and the source code is available on **[**Github**](https://github.com/tanneraslan/website).**
