--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -8,9 +8,13 @@ title: Tanner Aslan
 
 Hey, I'm Tanner Aslan.
 
-I'm a freshmen studying a B.S. in Computer Science at University of Michigan Ann Arbor, but I'm originally from Kentucky. I started my CS journey with game development, but I'm now interested in graphics programming and applications of parallel computing.
+I'm a junior studying a B.A. in Computer Science at Northwestern University, but I'm originally from Kentucky. I'm a transfer student from the University of Michigan Ann Arbor.
 
-Currently, I'm working on personal projects using mainly C++, GLSL, and OpenGL API. I'm interested in exploring NVIDIA CUDA, Rust, and more complex graphics APIs like Vulkan.
+I started my CS journey with game development, but I'm now interested in full stack development and graphics programming.
+
+This last summer, I was a software engineering intern at **SeatGeek** in NYC, where I was on the checkout team. 
+
+I like building things and exploring ways to integrate WebGL into website design. Currently, I'm working on **[**shadercn.com**](https://shadercn.com)**, an open-source React component library for adding shaders to your website. Outside of computers, I also play the violin and enjoy composing music.
 
 Outside of work, I play the violin and enjoy composing music as a hobby.
 
