--- a/src/pages/resume.mdx
+++ b/src/pages/resume.mdx
@@ -32,10 +32,10 @@ import ResumeRow from "../components/ResumeRow";
 
 <ResumeRow left="SeatGeek – New York City, NY" right="June 2025 – August 2025" />  
 *Software Engineering Intern – FanX Checkout Team*  
-- Designed and shipped an **Accelerated Checkout** system that persisted user data across sessions without login, resulting in a **7% increase in conversions** and **14% shorter checkout flows**, validated through A/B testing with Optimizely, Eppo, and Mixpanel.  
-- Delivered incremental **UX improvements** through bug fixes, accessibility enhancements, and UI layout changes.  
-- Reduced **technical debt** by refactoring and deprecating legacy components during migration to a new stateful checkout API.  
-- Implemented **Redux middleware** to reconcile unexpected API response changes, preventing fatal errors and session termination.  
+- Launched Accelerated Checkout experiment (persisting user data across sessions) that improved back-to-back **conversion rates by 7%**, reduced average **checkout steps by 14%**, and doubled discount code usage, validated via Optimizely, Eppo, and Mixpanel.
+- Implemented Redux **middleware** to reconcile unexpected API response changes during checkout, handling numerous edge cases that previously caused **fatal errors** and session termination.
+- **Enhanced error handling & UX polish:** improved payment method sorting logic, clarified account linking errors, fixed infinite submission loops, corrected accessibility and mobile UI issues, and moved cart validation to backend to avoid caching issues.
+- Reduced technical debt by refactoring legacy components, deprecating outdated feature flags and interfaces, and supporting the migration to a new stateful checkout API built on **FastAPI**.
 
 <ResumeRow left="SIGGRAPH – Vancouver, BC" right="August 2025" />  
 *Student Volunteer – SIGGRAPH 2025*  
@@ -43,9 +43,9 @@ import ResumeRow from "../components/ResumeRow";
 
 <ResumeRow left="Quaternion Entertainment – Remote" right="January 2020 – March 2023" />  
 *Scripting and User Interface Design – Game Development Team*  
-- Programmed and designed games for a ROBLOX studio, achieving **20M+ plays** and a **15k+ member community**.  
+- Co-founded ROBLOX game development studio, amassing **20M+** plays, **15k+** member community, and **2.8k** DAU at its peak
 - Earned **~$24,000** from a 30% share of profits via a custom in-game store.  
-- Built an **anti-cheat system** detecting unnatural player behaviors, reducing cheating reports by ~60%.  
+- Built an **anti-cheat system** detecting unnatural player behaviors, reducing cheating reports by **~60%**.  
 
 ---
 
