--- a/src/content/index.mdx
+++ b/src/content/index.mdx
@@ -8,7 +8,7 @@ title: Tanner Aslan
 
 Hey, I'm Tanner Aslan.
 
-I'm a junior studying a B.A. in Computer Science at Northwestern University, but I'm originally from Kentucky. I'm a transfer student from the University of Michigan Ann Arbor.
+I'm a junior studying a B.S. in Computer Science at the University of Michigan Ann Arbor, but I'm originally from Kentucky.
 
 I started my CS journey with game development, but I'm now interested in full stack development and graphics programming.
 
