--- a/src/content/resume.mdx
+++ b/src/content/resume.mdx
@@ -16,12 +16,7 @@ import ResumeRow from "../components/ResumeRow";
 
 ## Education  
 
-<ResumeRow left="Northwestern University – Evanston, IL" right="Expected March 2027" />  
-- BA in Computer Science  
-- GPA: 4.00 / 4.00  
-- **Courses:** Introduction to Computer Graphics, Introduction to Computer Systems  
-
-<ResumeRow left="University of Michigan – Ann Arbor, MI" right="August 2024 – May 2025" />  
+<ResumeRow left="University of Michigan – Ann Arbor, MI" right="Expected March 2027" />  
 - BS in Computer Science  
 - GPA: 3.96 / 4.00  
 - **Courses:** Data Structures & Algorithms, Foundations of Computer Science, Discrete Mathematics, Statistics and Data Analysis  
@@ -78,4 +73,4 @@ import ResumeRow from "../components/ResumeRow";
 - **Languages:** C++, C, TypeScript, Python, Lua, Java, GLSL, Slang, Bash, R, LaTeX, SQL  
 - **Libraries:** OpenGL, GLFW, GLM, React, Next.js, Tailwind, Redux, JavaFX, FastAPI, smtplib, psycopg2, Jest  
 - **Tools:** CMake, Vercel, Git, Jira, Docker, Postman, Proxyman, Figma, Ubuntu, npm, pip, Mixpanel, Eppo, Optimizely, Spreedly, Datadog  
-- **Concepts:** OOP, REST API design, Statistics, Parallel Computing, Agile Development, System Design  
+- **Concepts:** OOP, REST API design, Statistics, Parallel Computing, Agile Development, System Design
