added more music

--- a/src/content/music/the-final-battle.mdx
+++ b/src/content/music/the-final-battle.mdx
@@ -1,11 +1,11 @@
 ---
 title: "The Final Battle"
 date: 2024-04-13
-genre: ["Epic", "Symphonic Orchestra"]
+genre: ["Epic", "Orchestral"]
 audio: "/music/audio/TheFinalBattle.mp3"
 sheetMusic: "/music/documents/TheFinalBattle.pdf"
-description: "An arrangement of full symphonic orchestra and choir that builds tension and suspense into an epic finale."
-instruments: ["Full Symphonic Orchestra", "Choir"]
+description: "An arrangement of full symphony orchestra and choir that builds tension and suspense into an epic finale."
+instruments: ["Symphony Orchestra", "Choir"]
 ---
 
 This piece serves as the sonic climax of a fictional narrative, designed to capture the high stakes of a decisive conflict. 
