--- a/src/content/music/index.mdx
+++ b/src/content/music/index.mdx
@@ -5,3 +5,10 @@ title: Music
 # Music
 
 Here is a collection of my compositions and arrangements.
+
+
+### Licensing
+
+You are free to use any of my music for non-commercial purposes as long as attribution is given. For commercial use (including film, advertising, and monetized content), please contact me at [contact@tanneraslan.com](mailto:contact@tanneraslan.com) for licensing rates.
+
+All music is licensed under a [Creative Commons Attribution-NonCommercial 4.0 International License](https://creativecommons.org/licenses/by-nc/4.0/).
